# credit-risk-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 00_setup.md  01_data_overview.md  02_baseline.md  03_feature_engineering.md  04_model_optimization.md  api_deployment.md  setup.md
models/final/: lightgbm_reduced.pkl  selected_features.json
notebooks/analysis/: 00_data_preparation_egitim.ipynb
notebooks/modeling/: 01_eda.ipynb  02_baseline_model.ipynb  03_feature_engineering.ipynb  04_model_optimization.ipynb  05_model_evaluation.ipynb  credit_model_helpers.py
src/: __init__.py  app.py  config.py  inference.py
src/templates/: index.html
src/tests/: __init__.py  test_api.py
