[project]
name = "credit-risk-model"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.9",
    "lightgbm==4.6.0",
    "mlflow>=3.6.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pydantic==2.11.9",
    "python-multipart>=0.0.20",
    "scikit-learn==1.7.2",
    "shap==0.46.0",
    "uvicorn==0.37.0",
]

[dependency-groups]
dev = [
    "jupyter==1.1.1",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
]
